[metadata]
name = enigma
version = 1.0
description = Implementa uma biblioteca Python para criptografia usando tanto uma cifra normal, quanto uma cifra estilo a criada e utilizada na Segunda Guerra Mundial chamada de Enigma.
long_description = file: README.md
long_description_content_type = text/markdown
author = Pedro Pertusi & Alexandre Magno
author_email = pedrovazpertusi@gmail.com & alemagnov2@gmail.com 

[options]
packages = find:
install_requires =
    Numpy
    # Add other dependencies as needed

[options.packages.find]
where = src
